--- a/.github/workflows/linux_cpp.yml
+++ b/.github/workflows/linux_cpp.yml
@@ -11,7 +11,7 @@ jobs:
     - name: Check cmake
       run: cmake --version
     - name: Configure
-      run: cmake -S. -Bbuild -DCMAKE_BUILD_TYPE=Release -DBUILD_DEPS=ON
+      run: cmake -S. -Bbuild -DCMAKE_BUILD_TYPE=Release
     - name: Build
       run: cmake --build build --config Release --target all -v
     - name: Test
