--- a/.github/workflows/linux_java.yml
+++ b/.github/workflows/linux_java.yml
@@ -17,7 +17,7 @@ jobs:
     - name: Check java
       run: java -version
     - name: Configure
-      run: cmake -S. -Bbuild -DCMAKE_BUILD_TYPE=Release -DBUILD_JAVA=ON -DBUILD_DEPS=ON
+      run: cmake -S. -Bbuild -DCMAKE_BUILD_TYPE=Release -DBUILD_JAVA=ON
     - name: Build
       run: cmake --build build --config Release --target all -v
     - name: Test
