--- a/.github/workflows/osx_python.yml
+++ b/.github/workflows/osx_python.yml
@@ -15,7 +15,7 @@ jobs:
     - name: Check swig
       run: swig -version
     - name: Configure
-      run: cmake -S. -Bbuild -DCMAKE_BUILD_TYPE=Release -DBUILD_PYTHON=ON -DBUILD_DEPS=ON
+      run: cmake -S. -Bbuild -DCMAKE_BUILD_TYPE=Release -DBUILD_PYTHON=ON
     - name: Build
       run: cmake --build build --config Release --target all -v
     - name: Test
