--- a/.github/workflows/win_dotnet.yml
+++ b/.github/workflows/win_dotnet.yml
@@ -20,7 +20,7 @@ jobs:
     - name: Check dotnet
       run: dotnet --info
     - name: Configure
-      run: cmake -S. -Bbuild -G "Visual Studio 16 2019" -DCMAKE_BUILD_TYPE=Release -DBUILD_DOTNET=ON -DBUILD_DEPS=ON
+      run: cmake -S. -Bbuild -G "Visual Studio 16 2019" -DCMAKE_BUILD_TYPE=Release -DBUILD_DOTNET=ON
     - name: Build
       run: cmake --build build --config Release --target ALL_BUILD -- /verbosity:normal /maxcpucount
     - name: Test
