--- a/.github/workflows/win_java.yml
+++ b/.github/workflows/win_java.yml
@@ -20,7 +20,7 @@ jobs:
     - name: Check java
       run: java -version
     - name: Configure
-      run: cmake -S. -Bbuild -G "Visual Studio 16 2019" -DCMAKE_BUILD_TYPE=Release -DBUILD_JAVA=ON -DBUILD_DEPS=ON
+      run: cmake -S. -Bbuild -G "Visual Studio 16 2019" -DCMAKE_BUILD_TYPE=Release -DBUILD_JAVA=ON
     - name: Build
       run: cmake --build build --config Release --target ALL_BUILD -- /verbosity:normal /maxcpucount
     - name: Test
