--- a/.github/workflows/amd64_macos_dotnet.yml
+++ b/.github/workflows/amd64_macos_dotnet.yml
@@ -18,7 +18,7 @@ jobs:
         ]
       fail-fast: false
     name: amd64•MacOS•CMake(${{matrix.cmake.name}})•.Net
-    runs-on: macos-13 # last macos intel based runner
+    runs-on: macos-15-intel
     steps:
       - uses: actions/checkout@v4
       - name: Install SWIG
