--- a/.github/workflows/arm64_macos_python.yml
+++ b/.github/workflows/arm64_macos_python.yml
@@ -25,7 +25,7 @@ jobs:
         ]
       fail-fast: false
     name: amd64•MacOS•CMake(${{matrix.cmake.name}})•Py${{matrix.python.version}}
-    runs-on: macos-13 # last macos intel based runner
+    runs-on: macos-15-intel
     steps:
       - uses: actions/checkout@v4
       - name: Install SWIG
